# invariantkernels

./: .gitignore  .pre-commit-config.yaml  README.md  demo.ipynb  demo.py  pyproject.toml
invariantkernels/: __init__.py  anisotropic_group_invariant_kernel.py  group_invariant_kernel.py  invariant_kernel.py  isotropic_group_invariant_kernel.py  transformation_groups.py
tests/: test_group_invariant_kernel.py  test_invariant_kernel.py  test_transformation_groups.py
