[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "invariantkernels"
version = "0.0.5"
dependencies = [
  "gpytorch"
]
description = "Transformation-invariant kernels in GPyTorch"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  {name = "Theodore Brown", email = "theo.brown.uk@gmail.com"}
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
]

[project.urls]
"Homepage" = "https://github.com/theo-brown/invariantkernels"

[tool.setuptools]
packages = [
    "invariantkernels"
]